src/cp/grammer2/MyNewGrammar.java
/* Generated By:JavaCC: Do not edit this line. MyNewGrammar.java */
package cp.grammer2;
import java.io.PrintStream ;
import java.util.HashMap;

public class MyNewGrammar implements MyNewGrammarConstants {
        HashMap<String, String> SymbolMap = new HashMap<String, String>();
        public static void main( String[] args ) throws ParseException, TokenMgrError, NumberFormatException {
                while (true)
            {
              MyNewGrammar parser = new MyNewGrammar( System.in ) ;
              System.out.println("input:");
              try
              {
                parser.Start();
                parser.ReInit(System.in);
              }
              catch (Exception e)
              {
                System.out.println(e.getMessage());
                parser.ReInit(System.in);
              }
              catch (Error e)
              {
                System.out.println("Oops.");
                System.out.println(e.getMessage());
                break;
              }
            }
        }

  final public void Start() throws ParseException {
  String output="";
    label_1:
    while (true) {
      if (jj_2_1(10)) {
        output = print();
        jj_consume_token(EOL);
                                      System.out.println(output);
      } else if (jj_2_2(3)) {
        output = calculator();
        jj_consume_token(EOL);
                                           System.out.println(output);
      } else if (jj_2_3(3)) {
        whileStatement();
        jj_consume_token(EOL);
      } else if (jj_2_4(3)) {
        ifElseStatement();
        jj_consume_token(EOL);
      } else if (jj_2_5(3)) {
        forStatement();
        jj_consume_token(EOL);
      } else if (jj_2_6(3)) {
        assignment();
        jj_consume_token(EOL);
      } else if (jj_2_7(3)) {
        output = compareStatement();
        jj_consume_token(EOL);
                                                 System.out.println(output);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_8(3)) {
        ;
      } else {
        break label_1;
      }
    }
    jj_consume_token(44);
  }

/*************************************/
/*               四则运算                                            */
/*************************************/
  final public String calculator() throws ParseException, NumberFormatException {
        double previousValue=0.0;
    label_2:
    while (true) {
      previousValue = Expression(previousValue);
                        {if (true) return Double.toString(previousValue);}
      if (jj_2_9(3)) {
        ;
      } else {
        break label_2;
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public double Expression(double previousValue) throws ParseException, NumberFormatException {
        double i ;
        double value ;
    value = Term(previousValue);
    label_3:
    while (true) {
      if (jj_2_10(3)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_11(3)) {
        jj_consume_token(PLUS);
        i = Term(previousValue);
                  value += i ;
      } else if (jj_2_12(3)) {
        jj_consume_token(MINUS);
        i = Term(previousValue);
                  value -= i ;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return value ;}
    throw new Error("Missing return statement in function");
  }

  final public double Term(double previousValue) throws ParseException, NumberFormatException {
        double i ;
        double value ;
    value = Primary(previousValue);
    label_4:
    while (true) {
      if (jj_2_13(3)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_14(3)) {
        jj_consume_token(MULTIPLY);
        i = Primary(previousValue);
                  value *= i ;
      } else if (jj_2_15(3)) {
        jj_consume_token(DIVIDE);
        i = Primary(previousValue);
                  value /= i ;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return value ;}
    throw new Error("Missing return statement in function");
  }

  final public double Primary(double previousValue) throws ParseException, NumberFormatException {
        Token t=null ;
        double d ;
    if (jj_2_16(3)) {
      t = jj_consume_token(DIGITS);
          {if (true) return Double.parseDouble( t.image ) ;}
    } else if (jj_2_17(3)) {
      t = jj_consume_token(NUMBER);
          {if (true) return Double.parseDouble( t.image ) ;}
    } else if (jj_2_18(3)) {
      t = jj_consume_token(PREVIOUS);
          {if (true) return previousValue ;}
    } else if (jj_2_19(3)) {
      t = jj_consume_token(LPARENT);
      d = Expression(previousValue);
      jj_consume_token(RPARENT);
          {if (true) return d ;}
    } else if (jj_2_20(3)) {
      t = jj_consume_token(MINUS);
      d = Primary(previousValue);
          {if (true) return -d ;}
    } else if (jj_2_21(3)) {
      t = jj_consume_token(VARIABLE);
                {if (true) return Double.parseDouble(SymbolMap.get(t.image));}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/************************************/
/*            if-elif-else语句                      */
/************************************/
  final public void ifElseStatement() throws ParseException {
        boolean bool=false;
        double i=0.0;
        String value="";
    jj_consume_token(IF);
    bool = conditionStatement();
    jj_consume_token(COLON);
    jj_consume_token(LBRACE);
    jj_consume_token(EOL);
    label_5:
    while (true) {
      value = print();
                if(bool==true) {
                        System.out.println(value);
                }
      jj_consume_token(EOL);
      if (jj_2_22(3)) {
        ;
      } else {
        break label_5;
      }
    }
    jj_consume_token(RBRACE);
    if (jj_2_26(3)) {
      if (jj_2_24(3)) {
        jj_consume_token(ELIF);
        bool = conditionStatement();
        jj_consume_token(COLON);
        jj_consume_token(LBRACE);
        jj_consume_token(EOL);
        label_6:
        while (true) {
          value = print();
                                if(bool==true) {
                                        System.out.println(value);
                                }
          jj_consume_token(EOL);
          if (jj_2_23(3)) {
            ;
          } else {
            break label_6;
          }
        }
        jj_consume_token(RBRACE);
      } else {
        ;
      }
      jj_consume_token(ELSE);
      jj_consume_token(COLON);
      jj_consume_token(LBRACE);
      jj_consume_token(EOL);
      label_7:
      while (true) {
        value = print();
                                if(bool==false) {
                                System.out.println(value);
                                }
        jj_consume_token(EOL);
        if (jj_2_25(3)) {
          ;
        } else {
          break label_7;
        }
      }
      jj_consume_token(RBRACE);
    } else {
      ;
    }
  }

/************************************/
/*              while语句                                     */
/************************************/
  final public void whileStatement() throws ParseException {
        boolean bool=false;
        String value="";
    jj_consume_token(WHILE);
    bool = conditionStatement();
    jj_consume_token(COLON);
    jj_consume_token(LBRACE);
    jj_consume_token(EOL);
    label_8:
    while (true) {
      value = print();
                        while(bool==true) {
                                System.out.println(value);
                        }
      jj_consume_token(EOL);
      if (jj_2_27(3)) {
        ;
      } else {
        break label_8;
      }
    }
    jj_consume_token(RBRACE);
  }

/************************************/
/*              for循环                                           */
/************************************/
  final public void forStatement() throws ParseException {
        String value="";
        Token num1 =null;
        Token num2 =null;
    jj_consume_token(FOR);
    jj_consume_token(VARIABLE);
    jj_consume_token(IN);
    jj_consume_token(RANGE);
    jj_consume_token(LPARENT);
    num1 = jj_consume_token(DIGITS);
    jj_consume_token(COMMA);
    num2 = jj_consume_token(DIGITS);
    jj_consume_token(RPARENT);
    jj_consume_token(COLON);
    jj_consume_token(LBRACE);
    jj_consume_token(EOL);
    label_9:
    while (true) {
      //	  	(	    
                              value = print();
                                for(int i =Integer.parseInt(num1.image);i<Integer.parseInt(num2.image);i++) {
                                        System.out.println(value);
                                }
      jj_consume_token(EOL);
      if (jj_2_28(3)) {
        ;
      } else {
        break label_9;
      }
    }
    jj_consume_token(RBRACE);
  }

/************************************/
/*              比较大小                                           */
/************************************/
/*
*可以是：运算表达式和运算表达式比�?
*变量和运算表达式比较
*返回类型�?"true"�?"false"
*/
  final public String compareStatement() throws ParseException {
        String t="";
        String i="";
        String j="";
        Token token_i=null;
        Token token_j=null;
    if (jj_2_29(3)) {
      i = calculator();
    } else if (jj_2_30(3)) {
      token_i = jj_consume_token(VARIABLE);
                                       i=SymbolMap.get(token_i.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    t = comparison_symbol();
    if (jj_2_31(2)) {
      j = calculator();
    } else if (jj_2_32(3)) {
      token_j = jj_consume_token(VARIABLE);
                                       j=SymbolMap.get(token_j.image);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                        if(t.equals("<"))
                                { {if (true) return Boolean.toString(Double.parseDouble(i)<Double.parseDouble(j)) ;} }
                        else if(t.equals("=="))
                                { {if (true) return Boolean.toString(Double.parseDouble(i)==Double.parseDouble(j));} }
                        else if(t.equals(">"))
                                { {if (true) return Boolean.toString(Double.parseDouble(i)>Double.parseDouble(j));} }
                        else if(t.equals(">="))
                                { {if (true) return Boolean.toString(Double.parseDouble(i)>=Double.parseDouble(j));} }
                        else if(t.equals("<="))
                                { {if (true) return Boolean.toString(Double.parseDouble(i)<=Double.parseDouble(j));} }
    throw new Error("Missing return statement in function");
  }

  final public String comparison_symbol() throws ParseException {
        String symbol="";
    if (jj_2_33(3)) {
      jj_consume_token(BIGGER);
            symbol=">";{if (true) return symbol;}
    } else if (jj_2_34(3)) {
      jj_consume_token(EEQUALS);
            symbol="==";{if (true) return symbol;}
    } else if (jj_2_35(3)) {
      jj_consume_token(SMALLER);
            symbol="<";{if (true) return symbol;}
    } else if (jj_2_36(3)) {
      jj_consume_token(MORE_EQUAL);
               symbol=">=";{if (true) return symbol;}
    } else if (jj_2_37(3)) {
      jj_consume_token(LESS_EQUAL);
               symbol="<=";{if (true) return symbol;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public boolean conditionStatement() throws ParseException {
        String value;
        boolean bool;
    if (jj_2_38(3)) {
      jj_consume_token(FALSE);
                           {if (true) return false;}
    } else if (jj_2_39(3)) {
      jj_consume_token(TRUE);
                          {if (true) return true;}
    } else if (jj_2_40(3)) {
      value = compareStatement();
                                           {if (true) return Boolean.parseBoolean(value);}
    } else if (jj_2_41(3)) {
      value = calculator();
                                      {if (true) return true;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/************************************/
/*              print语句                                      */
/************************************/
/*print 变量�?*//*print 运算表达�?*//*print 比较语句*//*print 数字*/
/*print 包含变量名的运算表达�?*/
  final public String print() throws ParseException {
        String value="";
        Token t;
    jj_consume_token(PRINT);
    if (jj_2_42(3)) {
      t = jj_consume_token(STRING);
                              value=t.image;{if (true) return value;}
    } else if (jj_2_43(3)) {
      value = compareStatement();
                                            {if (true) return value;}
    } else if (jj_2_44(3)) {
      t = jj_consume_token(VARIABLE);
                               value=SymbolMap.get(t.image);{if (true) return value;}
    } else if (jj_2_45(3)) {
      value = calculator();
                                      {if (true) return value;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/************************************/
/*              赋�?�语�?                                          */
/************************************/
/*只能赋�?�double型�?�计算式、string�?*/
  final public void assignment() throws ParseException {
        Token variable_name=null;
        String variable_value="";
        Token variable_value2=null;
    variable_name = jj_consume_token(VARIABLE);
    jj_consume_token(EQUALS);
    if (jj_2_46(10)) {
      variable_value2 = jj_consume_token(STRING);
                                   variable_value=variable_value2.image;
    } else if (jj_2_47(3)) {
      variable_value = calculator();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                SymbolMap.put(variable_name.image,variable_value);
//	  	System.out.println("variable_name:"+variable_name.image);
//	  	System.out.println("variable_value:"+SymbolMap.get(variable_name.image));

  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_2_38(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  private boolean jj_2_39(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  private boolean jj_2_40(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  private boolean jj_2_41(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  private boolean jj_2_42(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  private boolean jj_2_43(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  private boolean jj_2_44(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  private boolean jj_2_45(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  private boolean jj_2_46(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }
